--- a/style.css
+++ b/style.css
@@ -9,7 +9,42 @@ body{
 
 .wrapper{
     width: 100%;
-    max-width: 960px;
+    max-width: 1200px;
     margin: 0 auto;
 }
+.flex-container{
+    display: flex;
+    background: white;
+    flex-wrap:wrap;
+}
+
+.box{
+    height: 100px;
+    flex-basis: 200px;
+    flex:1;
+    
+}
+
+
+.one{
+    background:red;
+    flex-basis: 100px;
+    min-width: 500px;
+}
+
+
+.two{
+    background:blue;
+    flex-basis: 200px;
+    min-width: 500px;
+}
+
+
+
+.three{
+    background: green;
+    flex-basis: 300px;
+    min-width: 500px;
+}
+   
 
