--- a/style.css
+++ b/style.css
@@ -16,35 +16,32 @@ body{
     display: flex;
     background: white;
     flex-wrap:wrap;
+    flex-flow: column-reverse;
+    justify-content:flex-start;
+    height: 800px;
 }
 
 .box{
     height: 100px;
-    flex-basis: 200px;
-    flex:1;
+    flex-basis: 100px;
+    flex:0 0 100px;
     
 }
 
 
 .one{
     background:red;
-    flex-basis: 100px;
-    min-width: 500px;
 }
 
 
 .two{
     background:blue;
-    flex-basis: 200px;
-    min-width: 500px;
 }
 
 
 
 .three{
     background: green;
-    flex-basis: 300px;
-    min-width: 500px;
-}
+} 
    
 
