--- a/style.css
+++ b/style.css
@@ -16,14 +16,15 @@ body{
     display: flex;
     background: white;
     flex-wrap:wrap;
-    flex-flow: column-reverse;
-    justify-content:flex-start;
-    height: 800px;
+    flex-flow: column;
+    align-items: flex-end;
+    height: 600px;
+    align-items: center;
+    justify-content: ;
 }
 
 .box{
-    height: 100px;
-    flex-basis: 100px;
+    width: 100px;
     flex:0 0 100px;
     
 }
