--- a/example-3/style.css
+++ b/example-3/style.css
@@ -61,9 +61,23 @@ a.fb{
 }
 
 /* grid vs flex base styles */
+#blocks{
+  margin: 20px;
+}
 
 
+article{
+  background:#fff;
+  margin-bottom: 20px;
+  padding: 10px;
+  box-sizing: border-box;
+}
 
+article h2{
+  text-align: center;
+  text-size: 20px; 
+  margin: 10px 0;
+}
 /* flex styles */
 
 nav ul.social li{
@@ -94,5 +108,23 @@ ul.social{
   margin: 0;
 }
     
-} /* end media 768 */
+} 
+
+#blocks{
+display: flex;
+flex-wrap: wrap;
+justify-content: space-between;
+}
+article{
+  flex: 0 1 32%;
+}
+
+article.stack{
+  flex: 0 1 100%;
+  transition: flex-basis 0.2s linear
+  ;
+}
+
+
+/* end media 768 */
 
