--- a/style.css
+++ b/style.css
@@ -5,29 +5,34 @@
 
 body{
     background: #eee;
+    color: #333;
 }
 
 .wrapper{
     width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-}
-.flex-container{
-    display: flex;
-    background: white;
-    flex-wrap:wrap;
-    flex-flow: column;
-    align-items: flex-end;
-    height: 600px;
-    align-items: center;
-    justify-content: ;
+    max-width: 960px;
 }
 
-.box{
-    width: 100px;
-    flex:0 0 100px;
-    
+
+#blocks{
+    display: flex;
+    margin: 10px;
+    justify-content: space-between;
+
 }
+    
+
+#blocks div{
+    flex: 0 0 100px;
+    padding: 40px 0;
+    text-align: center;
+    background:#ccc;
+}
+
+.one{order:3;}
+.two{order:2;}
+.three{order:1;}
+.four{order:0;}
 
 
 .one{
